--- a/netflix/src/components/pages/mainPage/movieBoard/components/movieCard/MovieCard.scss
+++ b/netflix/src/components/pages/mainPage/movieBoard/components/movieCard/MovieCard.scss
@@ -6,11 +6,41 @@
     height: auto;
     margin-bottom: 40px;
     cursor: pointer;
+    position: relative;
 
     .movie-card {
         width: 90%;
         margin: 0 auto;
         color: $light-grey-color;
+        position: relative;
+
+        &:hover  .movie-card-menu {
+            display: block;
+        }
+
+        .movie-card-menu {
+            position: absolute;
+            background: $primary-grey-color;
+            width: 40px;
+            height: 40px;
+            color: $white-color;
+            border-radius: 50%;
+            box-shadow: 0px 0px 15px 1px $primary-grey-color;
+            top: 3%;
+            right: 5%;
+            display: none;
+        
+               &:after {
+                   content: '•••';
+                   position: absolute;
+                   top: 50%;
+                   left: 50%;
+                   transform: translate(-50%, -50%) rotate(90deg);
+                   font-size: 15px; 
+                   letter-spacing: 4px;
+                   margin-top: 2px;
+               } 
+        }
 
         .movie-poster {
             width: 100%;
@@ -44,5 +74,41 @@
             font-size: 13px;
             text-align: left;
         }
+    }
+
+    .modal-movie-actions {
+        position: absolute;
+        right: 7%;
+        top: 3%;
+        background-color: $primary-grey-color;
+        color: $white-color;
+        font-weight: 300;
+        font-size: 13px;
+        width: 170px;
+        padding: 8px 0;
+        border-radius: 3px;
+
+        p {
+            padding: 8px 0;
+            margin: 0;
+        }
+
+        p:not(.close):hover {
+            background-color: $pink-color;
+          }
+
+        .close {
+            font-size: 15px;
+            text-align: right;
+            padding-right: 10px;
+        }
+    }
+
+    .opened {
+        display: block;
+    }
+
+    .closed {
+        display: none;
     }
 }
